force-app/main/default/objects/Property__c/fields/Anyone_Else_Living_At_Property__c.field-meta.xml
<CustomField>
    <fullName>Anyone_Else_Living_At_Property__c</fullName>
    <label>Anyone Else Living At Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>