force-app/main/default/objects/Property__c/fields/EPC_Rating__c.field-meta.xml
<CustomField>
    <fullName>EPC_Rating__c</fullName>
    <label>EPC Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>