force-app/main/default/objects/Property__c/fields/Is_business_carried_out_at_the_property__c.field-meta.xml
<CustomField>
    <fullName>Is_business_carried_out_at_the_property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is business carried out at the property</label>
    <type>Checkbox</type>
</CustomField>