force-app/main/default/objects/Property__c/fields/Number_of_Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bedrooms__c</fullName>
    <label>Number of Bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>