force-app/main/default/objects/Property__c/fields/Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Type__c</fullName>
    <label>Purchase Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy to Let</fullName>
            </value>
            <value>
                <fullName>Right to Buy</fullName>
            </value>
            <value>
                <fullName>Shared Ownership</fullName>
            </value>
            <value>
                <fullName>Help to Buy</fullName>
            </value>
            <value>
                <fullName>Right to Acquire</fullName>
            </value>
            <value>
                <fullName>Let to Buy</fullName>
            </value>
            <value>
                <fullName>New Build</fullName>
            </value>
            <value>
                <fullName>Discounted Market Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>