force-app/main/default/objects/Property__c/fields/Year_First_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Year_First_Occupied__c</fullName>
    <label>Year First Occupied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>