force-app/main/default/objects/Property__c/fields/Year_Property_was_built__c.field-meta.xml
<CustomField>
    <fullName>Year_Property_was_built__c</fullName>
    <label>Year Property was built</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>